Update codegen script to use the new codegen
No longer do we need Docker to generate files (although we still need java I guess)